--- a/sass/_dataRetention.scss
+++ b/sass/_dataRetention.scss
@@ -80,7 +80,7 @@
 
       @media only screen and (max-width:$bp-big) {
          font-size: 2.7rem;
-         margin-top: 6rem;
+         // margin-top: 6rem;
       }
 
       &-list {
