--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,95 +1,95 @@
 .navigation-header {
-    background-image: linear-gradient(to right, rgba($color-primary-light, 1), rgba($color-primary, .7));
-    grid-column: 1/-1;
-    grid-row: navigation-start / navigation-end;
+   background-image: linear-gradient(to right, rgba($color-primary-light, 1), rgba($color-primary, .7));
+   grid-column: 1/-1;
+   grid-row: navigation-start / navigation-end;
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    height: 9.6rem;
-    padding: 0 3rem;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   position: relative;
+   height: 9.6rem;
+   padding: 0 3rem;
 
-    .logo {
-        height: 4rem;
-    }
+   .logo {
+      height: 4rem;
+   }
 
-    .main-nav-list {
-        list-style: none;
-        display: flex;
-        gap: 2rem;
-        align-items: center;
-    }
+   .main-nav-list {
+      list-style: none;
+      display: flex;
+      gap: 2rem;
+      align-items: center;
+   }
 
-    .main-nav-link:link,
-    .main-nav-link:visited {
-        display: inline-block;
-        text-decoration: none;
-        color: $color-grey-light-1;
-        font-weight: 400;
-        font-size: 1.8rem;
+   .main-nav-link:link,
+   .main-nav-link:visited {
+      display: inline-block;
+      text-decoration: none;
+      color: $color-grey-light-1;
+      font-weight: 400;
+      font-size: 1.8rem;
 
-        &::before {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            display: block;
-            content: '';
-            height: 1px;
-            width: 0px;
-            background-color: $color-grey-light-1;
-        }
+      &::before {
+         position: absolute;
+         bottom: 0;
+         left: 0;
+         display: block;
+         content: '';
+         height: 1px;
+         width: 0px;
+         background-color: $color-grey-light-1;
+      }
 
-        @media only screen and (max-width:$bp-big) {
-            font-size: 4rem;
-        }
-    }
+      @media only screen and (max-width:$bp-big) {
+         font-size: 4rem;
+      }
+   }
 
-    .main-nav-link:hover,
-    .main-nav-link:active {
-        transform: scale(1.1);
+   .main-nav-link:hover,
+   .main-nav-link:active {
+      transform: scale(1.1);
 
-        &::before {
-            transition: .3s;
-            width: 100%;
-        }
-    }
+      &::before {
+         transition: .3s;
+         width: 100%;
+      }
+   }
 
-    .hero-btn-dark,
-    .hero-btn-light {
-        font-size: 1.8rem;
-        padding: 1rem;
-        margin-right: 0;
+   .hero-btn-dark,
+   .hero-btn-light {
+      font-size: 1.8rem;
+      padding: 1rem;
+      margin-right: 0;
 
-        @media only screen and (max-width:$bp-big) {
-            font-size: 3.5rem;
-            margin-top: 4rem;
-        }
-    }
+      @media only screen and (max-width:$bp-big) {
+         font-size: 3.5rem;
+         margin-top: 4rem;
+      }
+   }
 
-    .main-nav-link.hero-btn-light {
-        color: $color-grey-dark-1;
+   .main-nav-link.hero-btn-light {
+      color: $color-grey-dark-1;
 
-        @media only screen and (max-width:$bp-big) {
-            margin-top: 1.5rem;
-        }
-    }
+      @media only screen and (max-width:$bp-big) {
+         margin-top: 1.5rem;
+      }
+   }
 }
 
 .sticky .navigation-header {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-    height: 8rem;
-    padding-top: 0;
-    padding-bottom: 0;
-    background-image: linear-gradient(to right, rgba($color-primary, 2), rgba($color-primary-light, .93));
-    z-index: 999;
-    box-shadow: 0 1.2rem 3.2rem rgba(38, 93, 165, 0.388);
+   position: fixed;
+   top: 0;
+   bottom: 0;
+   width: 100%;
+   height: 8rem;
+   padding-top: 0;
+   padding-bottom: 0;
+   background-image: linear-gradient(to right, rgba($color-primary, 2), rgba($color-primary-light, .93));
+   z-index: 999;
+   box-shadow: 0 1.2rem 3.2rem rgba(38, 93, 165, 0.388);
 }
 
-.sticky .section-hero,
-.sticky .section-registration {
-    margin-top: 8rem;
-}
+// .sticky .section-hero,
+// .sticky .section-registration {
+//     margin-top: 8rem;
+// }
