Minor css bug fixed

--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -89,7 +89,7 @@
    box-shadow: 0 1.2rem 3.2rem rgba(38, 93, 165, 0.388);
 }
 
-// .sticky .section-hero,
-// .sticky .section-registration {
-//     margin-top: 8rem;
-// }
+.sticky .section-hero,
+.sticky .section-registration {
+   margin-top: 8rem;
+}
