--- a/CSS/style.css
+++ b/CSS/style.css
@@ -802,6 +802,10 @@ body {
   z-index: 999;
   box-shadow: 0 1.2rem 3.2rem rgba(38, 93, 165, 0.388); }
 
+.sticky .section-hero,
+.sticky .section-registration {
+  margin-top: 8rem; }
+
 .section-footer {
   background-image: linear-gradient(to right, #265ca5, #2b5c9d);
   grid-column: 1/-1;
